--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
     "compilerOptions": {
-        "outDir": "dist/js",
+        "outDir": "app/dist/js",
         "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "removeComments": true,
-        "moduleResolution": "Node",
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "moduleResolution": "Node"
     },
-    "include": ["app/**/*"]
+    "include": [
+        "app/src/**/*"
+    ]
 }
