feat: :white_check_mark: Feat: Criando um decorators para verificar performace.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "noImplicitAny": true,
         "removeComments": true,
         "strictNullChecks": true,
-        "moduleResolution": "Node"
+        "moduleResolution": "Node",
+        "experimentalDecorators": true
     },
     "include": [
         "app/src/**/*"
