--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "removeComments": true,
         "strictNullChecks": true,
         "moduleResolution": "Node",
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "sourceMap": true
     },
     "include": [
         "app/src/**/*"
